<resources>
    <string name="app_name">Healthy Lives</string>
    <string name="greet">Welcome User</string>
    <string name="waterIn">Enter number of cups of water</string>
    <string name="addWater">+</string>
    <string name="subWater">-</string>
    <string name="step">Steps:</string>
    <string name="active">Active minutes:</string>
    <string name="set">Settings</string>
    <string name="hintSign">Enter your password then use Login to login or Sign Up to create account (use valid email or longer password)</string>
</resources>
