<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.healthylives.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/greetUser"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/greet"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="244dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/step"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/stepCounter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="246dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/active"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/activeMin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <TextView
            android:id="@+id/waterIntake"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/waterIn"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/subtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:onClick="onClickSubtract"
                android:text="@string/subWater" />

            <TextView
                android:id="@+id/waterCounter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickAdd"
                android:text="@string/addWater" />
        </LinearLayout>

        <Button
            android:id="@+id/recordData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickRecord"
            android:text="Record Data" />

        <Button
            android:id="@+id/viewAllData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickViewAll"
            android:text="View All Data" />
    </LinearLayout>
</RelativeLayout>